[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI.gd" type="Script" id=1]
[ext_resource path="res://Font/Assistant-VariableFont_wght.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 2 )

[node name="UI" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TopBorderControl" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopBorder" type="ColorRect" parent="CanvasLayer/TopBorderControl"]
margin_right = 480.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomBorderControl" type="Control" parent="CanvasLayer"]
anchor_top = 0.94
anchor_bottom = 0.94
margin_right = 480.0
margin_bottom = -600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomBorder" type="ColorRect" parent="CanvasLayer/BottomBorderControl"]
margin_right = 480.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabelControl" type="Control" parent="CanvasLayer"]
anchor_right = 0.574
anchor_bottom = 0.02
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="CanvasLayer/ScoreLabelControl"]
margin_right = 43.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "Score: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackSpeedButtonControl" type="Control" parent="CanvasLayer"]
anchor_top = 0.97
anchor_bottom = 0.97
margin_left = 10.0
margin_top = 2.40002
margin_right = 10.0
margin_bottom = 2.40002
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackSpeedButton" type="Button" parent="CanvasLayer/AttackSpeedButtonControl"]
margin_right = 12.0
margin_bottom = 20.0
text = "Attack Speed"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackPowerButtonControl" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.97
anchor_right = 0.5
anchor_bottom = 0.97
margin_left = 1.59998
margin_top = 2.40002
margin_right = 1.59998
margin_bottom = 2.40002
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackPowerButton" type="Button" parent="CanvasLayer/AttackPowerButtonControl"]
margin_right = 12.0
margin_bottom = 20.0
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthButtonControl" type="Control" parent="CanvasLayer"]
anchor_left = 0.97
anchor_top = 0.97
anchor_right = 0.97
anchor_bottom = 0.97
margin_left = 1.59998
margin_top = 2.40002
margin_right = 1.59998
margin_bottom = 2.40002
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthButton" type="Button" parent="CanvasLayer/HealthButtonControl"]
margin_right = 12.0
margin_bottom = 20.0
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="resized" from="CanvasLayer/TopBorderControl" to="." method="_on_Control5_resized"]
[connection signal="pressed" from="CanvasLayer/AttackSpeedButtonControl/AttackSpeedButton" to="." method="_on_AttackSpeedButton_pressed"]
